[package]
name = "vibi-dpu"
version = "1.0.0"
edition = "2021"
authors = ["Tapish Rathore <tapish@vibinex.com>"]
license = "GPL-3.0-or-later"
description = "Vibinex Data Processing Unit for analysing praivate data"
readme = "README.md"
homepage = "https://vibinex.com"
repository = "https://github.com/Alokit-Innovations/vibi-dpu"
keywords = ["pullrequest", "privacy", "git"]
categories = ["development-tools", "profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html    
[dev-dependencies]
dotenv = "0.15"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64ct = "1.5.3"
sha256 = "1.1.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
google-cloud-pubsub = "0.15.0"
google-cloud-default = { version = "0.3.0", features = ["pubsub"] }
google-cloud-googleapis = "0.9.0"
google-cloud-auth = "0.10.0"
futures-util = "0.3.28"
tokio-util = "0.7.8"
sled = "0.34.7"
uuid = { version = "1.4.0", features = ["v4"]}
rand = "0.8.5"
chrono = "0.4.26"
tonic = "0.9.2"
once_cell = "1.18.0" # MIT
jsonwebtoken = "8.3.0" # MIT
fern = "0.6.2" # MIT
log = "0.4.20" # MIT/Apache2

# todo - check all lib licences
